--- a/visual_studio/dmm/dmm.vcxproj
+++ b/visual_studio/dmm/dmm.vcxproj
@@ -144,7 +144,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\dmm\dmm.cpp" />
+    <ClCompile Include="..\..\src\dmm\comm.cpp" />
+    <ClCompile Include="..\..\src\dmm\controller.cpp" />
+    <ClCompile Include="..\..\src\dmm\helper.cpp" />
+    <ClCompile Include="..\..\src\dmm\motor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\serial\serial.vcxproj">
@@ -152,7 +155,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\dmm\dmm.h" />
+    <ClInclude Include="..\..\include\dmm\comm.h" />
+    <ClInclude Include="..\..\include\dmm\helper.h" />
+    <ClInclude Include="..\..\include\dmm\motor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
