'Follow-test' completed

--- a/visual_studio/dmm/dmm.vcxproj.filters
+++ b/visual_studio/dmm/dmm.vcxproj.filters
@@ -15,12 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\dmm\dmm.cpp">
+    <ClCompile Include="..\..\src\dmm\comm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\dmm\helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\dmm\motor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\dmm\dmm.h">
+    <ClInclude Include="..\..\include\dmm\comm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\dmm\helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\dmm\motor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
