--- a/visual_studio/dmm/dmm.vcxproj
+++ b/visual_studio/dmm/dmm.vcxproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -145,7 +145,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\dmm\comm.cpp" />
-    <ClCompile Include="..\..\src\dmm\controller.cpp" />
     <ClCompile Include="..\..\src\dmm\helper.cpp" />
     <ClCompile Include="..\..\src\dmm\motor.cpp" />
   </ItemGroup>
